# AIDevOps

./: .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  DIFY_VERSION  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  docker-compose.dev.yml  docker-compose.llm-gateway.yml  docker-compose.observability.yml  docker-compose.security.yml  docker-compose.sso.yml  docker-compose.standalone.yml  docker-compose.swarm.yml  docker-compose.yml  package-lock.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/k6/: smoke.js
.github/workflows/: agent-ci.yml
argocd/: applicationset.yaml
config/: agents.yaml  workflow.yaml
dify-mcp-wechat/: .env.example  package-lock.json
dify-mcp-wechat/tests/: setup.ts
docs/: ROADMAP.md  github-actions.md  github-actions.zh-CN.md  lessons-learned.md
docs/design/: cdd-design.md  industry-comparison.md
docs/roadmap/: improvement-plan.md
enterprise/analytics/: package.json
enterprise/config/: marketplace-plugins.yaml
enterprise/dev-kit/: .gitignore  Dockerfile  README.md  dify-dev.yaml  jest.config.js  package-lock.json  package.json
enterprise/patches/: dify-network-fix.patch
enterprise/quota-manager/: package.json  tsconfig.json
enterprise/scim-adapter/: package.json
enterprise/scripts/: health-check.sh  init.sh  (+1 more)
examples/: run_dev_to_qa.py
mcp_servers/: __init__.py
platform/: __init__.py
prometheus/: alertmanager.yml  prometheus.yml
registry/: index.json
scripts/: init-secrets.sh
vscode-dify-dev/: package.json
(+208 files in other folders)
