[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aidevops"
version = "1.0.0"
description = "Multi-person collaborative DevOps workflow platform using LLM, MCP, and Skills"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "mcp>=1.0.0",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "anyio>=4.0.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["platform", "mcp_servers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
